update instructions on bibtex

--- a/work/2bibtex.tex
+++ b/work/2bibtex.tex
@@ -14,15 +14,15 @@
 
 \pagestyle{fancy}
 \begin{document}
-\paragraph{Instructions.} You should make a separate title page containing your name, the due date, and the title of this assignment, which is `Prompt \#2: Using BiBTeX'. Submit by the end of the day Thursday,  Sept.~28, using the link \url{https://classroom.github.com/a/CsQSh0wC} when your submission is ready.  Submit the .tex, .bib, and .pdf files with a name format `last-first-bibtex-demo'.
+\paragraph{Instructions.} You should make a separate title page containing your name, the due date, and the title of this assignment, which is `Prompt \#2: Using BiBTeX'. Submit by the end of the day \emph{Tuesday, October 2}, using the link \url{https://classroom.github.com/a/CsQSh0wC} when your submission is ready.  Submit the .tex, .bib, and .pdf files with a name format `last-first-bibtex-demo'.
 
 \begin{enumerate}
-\item Use the provided \verb|.bib| file (be sure to save this file as \verb|.bib|) that contains references to three (or more) of your mathematics or science textbooks for the semester. Notice that each entry begins with an informative `citekey' (authorDate, shortTitle) and include the title, author, publisher, year, edition, and isbn (other fields volume, series, address, and note are optional).
-\item Using the previous assignment as the starting point, add citations to the relevant textbooks in your course descriptions.
+\item Use the \verb|.bib| file that you started in class (be sure to save this file as \verb|.bib|) that contains references to three (or more) of your mathematics or science textbooks for the semester. Notice that each entry begins with an informative `citekey' (authorDate, shortTitle) and include the title, author, publisher, year, edition, and isbn (other fields volume, series, address, and note are optional).
+\item Using the previous assignment as the starting point (if this is helpful to you, otherwise you can use the example from your ``Math environments" class notes), add citations to the relevant textbooks in your course descriptions.
 \item Make any corrections necessary in response to comments on the previous assignment (spelling, math errors, math symbols).
 \end{enumerate}
 
-\paragraph{Notes and Hints.} We will update this with a proper bibliography and citations in the next assignment. You might try a few bibliography options and styles. The page \url{https://en.wikibooks.org/wiki/LaTeX/Bibliography_Management} is an incredibly rich source of information on LaTeX{} bibliography production. You will want to use \verb|\usepackage{natbib}|, \verb|\usepackage{amsthm}|, and  \verb|\usepackage{amsmath}| in your preamble. 
+\paragraph{Notes and Hints.} You might try a few bibliography options and styles. The page \url{https://en.wikibooks.org/wiki/LaTeX/Bibliography_Management} is an incredibly rich source of information on LaTeX{} bibliography production. You will want to use \verb|\usepackage{natbib}|, \verb|\usepackage{amsthm}|, and  \verb|\usepackage{amsmath}| in your preamble. 
 \begin{itemize}\compactlist
 \item I expect each of you will have a unique combination of proofs and definitions, even if many of you share similar schedules.
 \item Do not forget to comment your code.
